--- a/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
@@ -5,6 +5,17 @@
 
 .sections.nav-sections {
     margin-bottom: 0;
+    .section-items{
+        .section-item-title[aria-controls="store.menu"]{
+            width: 25%;
+        }
+        .section-item-title[aria-controls="store.links"]{
+            width: 30%;
+        }
+        .section-item-title[aria-controls="store.settings"]{
+            width: 45%;
+        }
+    }
 }
 
 .section-item-content {
