--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
@@ -26,7 +26,7 @@ body{
 .action.action-select-shipping-item {
     background: @smoke;
     border-color: @black;
-    color: @white;
+    color: @white !important;
     font-family: 'Montserrat-Regular' !important;
 
     &:hover{
@@ -99,5 +99,17 @@ body{
         font-family: 'Montserrat-Bold';
         text-transform: uppercase;
         font-size: 1.6rem;
+    }
+}
+
+.box-tocart{
+    .fieldset{
+        .product-item-actions{
+            .actions-primary{
+                .action.tocart.primary{
+                    margin-left: -4.6em;
+                }
+            }
+        }
     }
 }
