Add iteraction to menu theme party

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
@@ -50,6 +50,10 @@
                         line-height: normal;
                         text-transform: uppercase;
                     }
+
+                    &.level-top:hover span{
+                        color: @submenu-color-hover;
+                    }
                 }
             }
         }
