Fix product card height

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
@@ -68,7 +68,13 @@
                 }
 
                 .price-box {
+                    height: 45px;
                     color: @purple;
+
+                    .price-box {
+                        height: 45px;
+                    }
+
                     .minimal-price {
                         color: @purple;
                         .price-label {
