Update hover color on flag button

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
@@ -29,7 +29,7 @@ textarea:not([disabled]):focus {
                 .action.toggle:after,
                 .action.toggle:hover,
                 .action.toggle.active:hover:after {
-                    color: @header-text-color;
+                    color: @header-text-color !important;
                 }
 
                 .action.toggle {
