--- a/app/design/frontend/Webjump/theme-party/web/css/source/_main.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_main.less
@@ -1,14 +1,29 @@
+@orange: #de6100;
+@white: #fff;
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 14px;
+}
+*::-webkit-scrollbar-track {
+    background: @white;
+}
+*::-webkit-scrollbar-thumb {
+    background-color: @orange;
+    border-radius: 15px;
+    border: 3px solid @white;
+}
+
 .page-wrapper {
     .breadcrumbs {
         padding-top: 20px;
     }
 
-    .page-main{
+    .page-main {
         padding-top: 40px;
     }
 
-    .breadcrumbs ~ .page-main{
+    .breadcrumbs ~ .page-main {
         padding-top: 10px;
     }
-
 }
