--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
@@ -143,10 +143,6 @@ body{
         .columns {
             .column.main {
                 .product-item {
-                    width: 100%;
-                    .product-item-info {
-                        width: 100%;
-                    }
                     .product-item-inner {
                         .action.tocart.primary {
                             margin-left: 0;
@@ -196,6 +192,20 @@ body{
                         box-shadow: none;
                     }
                 }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 480px){
+    .actions-primary{
+        padding: 7px 15px;
+
+        .action.tocart.primary{
+            width: 100% !important;
+
+            span{
+                font-size: 12px !important;
             }
         }
     }
