--- a/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
@@ -23,12 +23,9 @@ body{
 .action.action-select-shipping-item,
 .action.create.primary,
 .action.login.primary,
-.action.update,
 .action.action-login.secondary,
 .action.reload.captcha-reload,
 .action.submit.primary,
-.action.share,
-.action.tocart,
 .action.action-show-popup,
 .action.action-edit-address,
 .action.action-select-shipping-item,
@@ -134,6 +131,9 @@ body{
             padding: 0;
         }
     }
+    .products-grid .product-item-actions {
+        margin: 0;
+    }
 }
 
 @media only screen and (min-width: 640px) and (max-width: 767px) {
@@ -169,13 +169,13 @@ body{
 
 @media only screen and (max-width: 480px){
     .actions-primary{
-        padding: 7px 15px;
+        padding: 0;
 
         .action.tocart.primary{
-            width: 100% !important;
+            white-space: normal;
 
             span{
-                font-size: 12px !important;
+                font-size: 12px;
             }
         }
     }
