--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_catalog.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_catalog.less
@@ -11,6 +11,13 @@
                             overflow: hidden;
                             height: 40px;
                         }
+
+                        .price-box {
+                            height: 35px;
+                            .price-box {
+                                height: 35px;
+                            }
+                        }
                     }
                 }
             }
