--- a/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
@@ -64,6 +64,13 @@ body{
     }
 }
 
+.action.tocart.primary{
+    &:hover{
+        background: @hover-button-color !important;
+        border-color: @hover-button-color;
+    }
+}
+
 .modal-footer{
     .action-primary.action-accept{
         background: @menu-button-color;
