Fixing buttom action cancel primary

--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
@@ -56,7 +56,8 @@ body{
 }
 
 .action.action-apply,
-.action.apply.primary{
+.action.apply.primary,
+.action.cancel.primary{
     background: @smoke !important;
     color: @white !important;
     box-shadow: unset !important;
