--- a/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
@@ -52,7 +52,8 @@ body{
 }
 
 .action.action-apply,
-.action.apply.primary {
+.action.apply.primary,
+.action.cancel.primary {
     background: @menu-button-color !important;
     color: @catalog-topnav-text-color !important;
     box-shadow: unset !important;
