--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
@@ -208,6 +208,10 @@
                         border-top: none;
                         color:@white;
                         font-size: 1.7rem;
+
+                        .not-logged-in{
+                            display: none;
+                        }
                     }
 
                     li{
