--- a/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
@@ -99,6 +99,12 @@
         }
     }
 
+    li.greet.welcome {
+        .not-logged-in{
+            display: none;
+        }
+    }
+
     .navigation .parent .level-top:after {
         display: none;
     }
